<resources>
    <string name="app_name">手机心悦护理师端</string>
    <string name="et_phone">账号/手机号码</string>
    <string name="et_mobile">手机号码</string>
    <string name="et_password">密码</string>
    <string name="text_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_register">立即注册</string>
    <string name="btn_sure">确认</string>
    <string name="btn_set">重置密码</string>
    <string name="tv_forget">忘记密码</string>
    <string name="tv_wenxin">微信登陆</string>
    <string name="tv_microblog">微博登陆</string>
    <string name="tv_qq">QQ登陆</string>
    <string name="et_verifiy">验证码</string>
    <string name="tv_getverifiy">获取验证码</string>
    <string name="tv_have">已有账号？</string>
    <string name="tv_direct">直接登录</string>
    <string name="et_writephone">请输入手机号码</string>
    <string name="et_writeverify">请输入验证码</string>
    <string name="et_resetpsd">请确认新密码</string>
    <string name="tv_rule">请输入6-32位字符，需字母、数字、符号两种以上组合，区分大小写。</string>
    <string name="tv_mobile_null">手机号码不能为空</string>
    <string name="tv_mobile_right">请输入正确的手机号码</string>
    <string name="tv_psd_right">密码不能为空</string>
    <string name="tv_user_null">手机号码不能为空</string>
    <string name="tv_phone_null">用户不存在,请注册</string>
    <string name="tv_phone_right">请输入正确的手机号码</string>

    <string name="tv_home">首页</string>
    <string name="tv_shequ">社区</string>
    <string name="tv_find">发现</string>
    <string name="tv_order">订单</string>
    <string name="tv_my">我的</string>
    <string name="my_file">我的档案</string>
    <string name="my_money">我的收益</string>
    <string name="my_service">我的服务</string>
    <string name="my_evaluate">我的评价</string>
    <string name="ar_head">头像</string>
    <string name="ar_identity">身份认证</string>
    <string name="ar_experience">工作经验</string>
    <string name="ar_speciality">业务特长</string>
    <string name="ar_work">工作内容</string>
    <string name="btn_save">保存</string>
    <string name="text_addtrain">新增培训信息</string>
    <string name="text_edittrain">编辑培训信息</string>
    <string name="text_info">个人资料</string>
    <string name="text_revise">修改密码</string>
    <string name="text_advice">意见反馈</string>
    <string name="text_about">关于我们</string>
    <string name="text_check">检查版本</string>
    <string name="text_protocol">服务协议</string>
    <string name="btn_exit">退出登录</string>
    <string name="text_set">设置</string>
    <string name="text_my">我的</string>
    <string name="text_original_psd">原密码</string>
    <string name="text_new_psd">新密码</string>
    <string name="input_original_psd">请输入当前密码</string>
    <string name="input_new_psd">请输入新密码</string>
    <string name="input_sure_psd">确认新密码</string>
    <string name="input_rule_one">1.为了您的账号安全，新旧密码必须不同；</string>
    <string name="input_rule_two">2.请输入6-32位字符，需字母、数字、符号两种以上组合，区分大小写。</string>
    <string name="input_question">问题描述</string>
    <string name="text_version">当前版本：</string>
    <string name="text_relation">联系电话：</string>
    <string name="text_official">官网地址：</string>
    <string name="text_wechat">官方微信：</string>


    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
</resources>
