<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/h30"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h120"
        android:paddingLeft="@dimen/w30"
        android:background="@color/color_white"
        >
        <TextView
            style="@style/text_sixthree_eight"
            android:text="@string/ar_head"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/w30"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">
            <com.szxyyd.mpxyhls.view.RoundImageView
                android:id="@+id/iv_photo"
                android:layout_width="@dimen/w80"
                android:layout_height="@dimen/w80"
                android:background="@mipmap/ar_photo"/>
            <ImageView
                style="@style/iv_next"
                android:layout_marginLeft="@dimen/w20"
                 />
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
           style="@style/view_line"></View>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h120"
        android:paddingLeft="@dimen/w30"
        android:paddingRight="@dimen/w30"
        android:background="@color/color_white">
        <TextView
            style="@style/text_sixthree_eight"
            android:text="@string/ar_identity"
            android:layout_centerVertical="true"
            />
        <ImageView
            style="@style/iv_next"
            />
    </RelativeLayout>
    <ListView
        android:id="@+id/ll_arInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h500"
        android:layout_marginTop="@dimen/h20"
        android:background="@color/color_white"
        android:orientation="vertical"></ListView>

    <ListView
        android:id="@+id/ll_arContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h410"
        android:layout_marginTop="@dimen/h20"
        android:background="@color/color_white"
        android:orientation="vertical">

    </ListView>
        <Button
            android:id="@+id/btn_save"
            style="@style/btn_sumbit"
            android:layout_marginTop="@dimen/h40"
            android:text="@string/btn_save"
            android:layout_gravity="center"
            />
    </LinearLayout>

</ScrollView>
