<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/h30"
        android:orientation="vertical">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="@dimen/w30"
       android:layout_marginTop="@dimen/h30"
       android:layout_marginBottom="@dimen/h30"
       android:orientation="horizontal"
       android:gravity="center"
       >
       <ImageView
           android:layout_width="@dimen/w38"
           android:layout_height="@dimen/h38"
           android:background="@mipmap/ar_experience"/>
     <TextView
         style="@style/text_sixthree_eight"
         android:layout_marginLeft="@dimen/w20"
         android:text="@string/ar_experience"/>
   </LinearLayout>
    <LinearLayout
        style="@style/ar_ll"
        android:paddingLeft="@dimen/w50"
        android:orientation="horizontal"
       >
     <TextView
         style="@style/text_sixthree_six"
         android:text="照顾宝宝（个数）"
         android:layout_gravity="center"/>
        <EditText
            android:id="@+id/et_number"
            style="@style/text_sixthree_six"
            android:layout_marginLeft="@dimen/w80"
            android:hint="0"
            android:background="@null"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_view_line"
        android:alpha="0.5"
        ></View>
    <LinearLayout
        style="@style/ar_ll"
        android:paddingLeft="@dimen/w50"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/text_sixthree_six"
            android:layout_gravity="center"
            android:text="工作时长（年）" />
        <EditText
            android:id="@+id/et_year"
            style="@style/text_sixthree_six"
            android:layout_marginLeft="@dimen/w80"
            android:layout_gravity="center"
            android:hint="1"
            android:background="@null"
            />
    </LinearLayout>
    <!-- 业务特长-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/w30"
        android:layout_marginTop="@dimen/h30"
        android:layout_marginBottom="@dimen/h30"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="@dimen/w38"
            android:layout_height="@dimen/h38"
            android:background="@mipmap/ar_speciality"/>
        <TextView
            style="@style/text_sixthree_eight"
            android:layout_marginLeft="@dimen/w20"
            android:text="@string/ar_speciality"/>
    </LinearLayout>
    <GridLayout
        android:id="@+id/gl_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:columnCount="3"
        android:paddingBottom="@dimen/h30"
        android:orientation="horizontal" >
    </GridLayout>
  <!-- 工作内容-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/w30"
        android:layout_marginTop="@dimen/h30"
        android:layout_marginBottom="@dimen/h30"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="@dimen/w40"
            android:layout_height="@dimen/h35"
            android:background="@mipmap/ar_work"/>
        <TextView
            style="@style/text_sixthree_eight"
            android:layout_marginLeft="@dimen/w20"
            android:text="@string/ar_work"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h210"
        android:background="@color/color_white"
        android:layout_marginLeft="@dimen/w30"
        android:layout_marginRight="@dimen/w30"
        android:padding="@dimen/w20"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_content"
            style="@style/text_sixthree_six"
            android:hint="我我我我"
            android:background="@null"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_save"
        style="@style/btn_sumbit"
        android:layout_marginTop="@dimen/h40"
        android:text="@string/btn_save"
        android:layout_gravity="center"
        />
    </LinearLayout>
</ScrollView>
